ultimo fix margen vertucak de state visible

--- a/styles/_modulos.scss
+++ b/styles/_modulos.scss
@@ -16,8 +16,8 @@ li.section.main{
     max-width: 43.5em;
     margin: 0 auto!important;
     .state-visible {
-        margin-top: 2rem;
-        margin-bottom: 1rem;
+        margin-top: 2rem!important;
+        margin-bottom: 1rem!important;
     }
 }
 //Secciones que contienen modulos de aprendizaje
